--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -1,4 +1,4 @@
 mixin date-dropdown(options)
-    input(type = 'text',
-          class = 'date-dropdown js-date-dropdown'
-    ) 
+  .date-dropdown
+    input(type='text' class='date-dropdown__input js-date-dropdown' placeholder='ДД.ММ.ГГГГ')
+    span.date-dropdown__expand-more.material-icons expand_more
