--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -1,11 +1,38 @@
 @import '../../node_modules/air-datepicker/dist/css/datepicker.min.css';
 
 .date-dropdown {
+  position: relative;
   width: 100%;
-  max-width: 320px;
+  max-width: 266px;
+
 
   &__arrows {
     color: $purple;
+  }
+
+  &__input {
+    width: 266px;
+    height: 44px;
+
+    height: 44px;
+    font-family: $montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: $dark75;
+    padding: 9px 14px 11px 14px;
+    background: #FFFFFF;
+    border: 1px solid $dark25;
+    box-sizing: border-box;
+    border-radius: 4px;
+  }
+
+  &__expand-more {
+    position: absolute;
+    right: 10px;
+    top: 11px;
+    cursor: pointer;
   }
 }
 
