added folder to colors and type page, ref fonts links

--- a/src/pages/common/fonts.scss
+++ b/src/pages/common/fonts.scss
@@ -1,44 +1,44 @@
 @font-face {
   font-family: 'Quicksand';
-  src: url('../fonts/quicksand/Quicksand-Regular.woff') format('woff'),
-    url('../fonts/quicksand/Quicksand-Regular.ttf') format('truetype'),
-    url('../fonts/quicksand/Quicksand-Regular.svg#Quicksand-Regular') format('svg');
+  src: url('../../fonts/quicksand/Quicksand-Regular.woff') format('woff'),
+    url('../../fonts/quicksand/Quicksand-Regular.ttf') format('truetype'),
+    url('../../fonts/quicksand/Quicksand-Regular.svg#Quicksand-Regular') format('svg');
   font-style: normal;
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Quicksand';
-  src: url('../fonts/quicksand/Quicksand-Bold.woff') format('woff'),
-    url('../fonts/quicksand/Quicksand-Bold.ttf') format('truetype'),
-    url('../fonts/quicksand/Quicksand-Bold.svg#Quicksand-Bold') format('svg');
+  src: url('../../fonts/quicksand/Quicksand-Bold.woff') format('woff'),
+    url('../../fonts/quicksand/Quicksand-Bold.ttf') format('truetype'),
+    url('../../fonts/quicksand/Quicksand-Bold.svg#Quicksand-Bold') format('svg');
   font-style: normal;
   font-weight: bold;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('../fonts/montserrat/Montserrat-Regular.woff') format('woff'),
-    url('../fonts/montserrat/Montserrat-Regular.ttf') format('truetype'),
-    url('../fonts/montserrat/Montserrat-Regular.svg#Montserrat-Regular') format('svg');
+  src: url('../../fonts/montserrat/Montserrat-Regular.woff') format('woff'),
+    url('../../fonts/montserrat/Montserrat-Regular.ttf') format('truetype'),
+    url('../../fonts/montserrat/Montserrat-Regular.svg#Montserrat-Regular') format('svg');
   font-style: normal;
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('../fonts/montserrat/Montserrat-Bold.woff') format('woff'),
-    url('../fonts/montserrat/Montserrat-Bold.ttf') format('truetype'),
-    url('../fonts/montserrat/Montserrat-Bold.svg#Montserrat-Bold') format('svg');
+  src: url('../../fonts/montserrat/Montserrat-Bold.woff') format('woff'),
+    url('../../fonts/montserrat/Montserrat-Bold.ttf') format('truetype'),
+    url('../../fonts/montserrat/Montserrat-Bold.svg#Montserrat-Bold') format('svg');
   font-style: normal;
   font-weight: bold;
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('../fonts/open sans/OpenSans-Bold.woff') format('woff'),
-    url('../fonts/open sans/OpenSans-Bold.ttf') format('truetype'),
-    url('../fonts/open sans/OpenSans-Bold.svg#OpenSans-Bold') format('svg');
+  src: url('../../fonts/open sans/OpenSans-Bold.woff') format('woff'),
+    url('../../fonts/open sans/OpenSans-Bold.ttf') format('truetype'),
+    url('../../fonts/open sans/OpenSans-Bold.svg#OpenSans-Bold') format('svg');
   font-style: normal;
   font-weight: bold;
 }
@@ -47,9 +47,9 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/material icons/MaterialIcons-Regular.woff') format('woff'),
-    url('../fonts/material icons/MaterialIcons-Regular.ttf') format('truetype'),
-    url('../fonts/material icons/MaterialIcons-Regular.svg#MaterialIcons-Regular') format('svg');
+  src: url('../../fonts/material icons/MaterialIcons-Regular.woff') format('woff'),
+    url('../../fonts/material icons/MaterialIcons-Regular.ttf') format('truetype'),
+    url('../../fonts/material icons/MaterialIcons-Regular.svg#MaterialIcons-Regular') format('svg');
 }
 
 .material-icons {
