--- a/src/pages/colors-and-type/colors-and-type.pug
+++ b/src/pages/colors-and-type/colors-and-type.pug
@@ -1,6 +1,6 @@
-include ../components/color-intro/color-intro.pug
-include ../components/text-intro/text-intro.pug
-include ../components/logo/logo.pug
+include ../../components/color-intro/color-intro.pug
+include ../../components/text-intro/text-intro.pug
+include ../../components/logo/logo.pug
 doctype
 html
   head
