--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/air-datepicker/dist/css/datepicker.min.css';
+@import '../../../node_modules/air-datepicker/dist/css/datepicker.min.css';
 
 .date-dropdown {
   position: relative;
