--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/item-quantity-dropdown/lib/item-quantity-dropdown.min.css";
+@import "../../../node_modules/item-quantity-dropdown/lib/item-quantity-dropdown.min.css";
 
 .dropdown {
   width: 320px;
