--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/paginationjs/dist/pagination.css'
+@import '../../../node_modules/paginationjs/dist/pagination.css'
 
 /*
   paginationjs - блок пагинации
