--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/ion-rangeslider/css/ion.rangeSlider.min.css';
+@import '../../../node_modules/ion-rangeslider/css/ion.rangeSlider.min.css';
 
 .slider {
   max-width: 266px;
