--- a/src/components/search-card/search-card.scss
+++ b/src/components/search-card/search-card.scss
@@ -1,2 +1,60 @@
 @import '../filter-date-dropdown/filter-date-dropdown.scss';
 @import '../dropdown/dropdown';
+@import '../button/button';
+
+.search-card {
+
+
+  width: 380px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  &__content {
+    //width: 320px;
+    padding: 39px 29px 29px 29px;
+  }
+
+  &__title {
+    font-family: $quicksand;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 30px;
+    color: $dark100;
+  }
+
+  &__date-selection {
+    margin-top: 16px;
+  }
+
+  &__date-dropdown-title {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__arrival-date-title,
+  &__exit-date-title,
+  &__guests-dropdown-title {
+    width: 150px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    //line-height: 15px;
+    text-transform: uppercase;
+    color: $dark100;
+  }
+
+  &__exit-date-title {}
+
+  &__date-dropdown {}
+
+  &__guests-selection {}
+
+  &__gusts-dropdown {}
+
+  &__button {}
+}
