started registration card, ref form in search card

--- a/src/components/search-card/search-card.pug
+++ b/src/components/search-card/search-card.pug
@@ -11,7 +11,7 @@ include ../button/button.pug
 
 mixin search-card(options)
   .search-card
-    form.search-card__content
+    form.search-card__content(action='/mock-address' method='get')
       p.search-card__title Найдём номера под ваши пожелания
       .search-card__date-selection
         .search-card__date-dropdown-title
