--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -3,3 +3,4 @@
 @import '../common/global.scss';
 @import '../common/fonts.scss';
 @import '../../components/search-card/search-card.scss';
+@import '../../components/registration-card/registration-card.scss';
