--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -1,4 +1,5 @@
 include ../../components/search-card/search-card.pug
+include ../../components/registration-card/registration-card.pug
 html
   head
     meta(charset='utf-8')
@@ -11,4 +12,4 @@ html
     script(src='./cards.js')
   body
     div(style="height: 500px; display: flex; justify-content: center; align-items: center;")
-      +search-card()
+      +registration-card()
