--- a/src/components/registration-card/registration-card.scss
+++ b/src/components/registration-card/registration-card.scss
@@ -1,4 +1,4 @@
 @import '../text-field/text-field.scss';
 @import '../radio/radio.scss';
-@import '../toggle/toggle.pug.scss';
+@import '../toggle/toggle.scss';
 @import '../button/button.scss';
