--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -12,4 +12,4 @@ html
     script(src='./cards.js')
   body
     div(style="height: 500px; display: flex; justify-content: center; align-items: center;")
-      +registration-card()
+      //+registration-card()
