--- a/src/components/registration-card/registration-card.scss
+++ b/src/components/registration-card/registration-card.scss
@@ -2,3 +2,52 @@
 @import '../radio/radio.scss';
 @import '../toggle/toggle.scss';
 @import '../button/button.scss';
+
+.registration-card {
+  width: 380px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  &__content {
+    padding: 39px 29px 30px 29px;
+    margin: 0;
+  }
+
+  &__title {}
+
+  &__form {}
+
+  &__name-input {}
+
+  &__surname-input {}
+
+  &__radio {}
+
+  &__born-date {}
+
+  &__born-date-title,
+  &__entry-title {}
+
+  &__born-date-input {}
+
+  &__entry-datas {}
+
+  &__email-input {}
+
+  &__password-input {}
+
+  &__toggle {}
+
+  &_registration-button {}
+
+  &__account-entry {}
+
+  &__account-title {}
+
+  &__entry-button {}
+
+
+}
