--- a/src/components/registration-card/registration-card.scss
+++ b/src/components/registration-card/registration-card.scss
@@ -16,20 +16,46 @@
     margin: 0;
   }
 
-  &__title {}
+  &__title {
+    font-family: $quicksand;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 30px;
+    color: $dark100;
+  }
 
-  &__form {}
+  &__form {
+    margin-top: 20px;
+  }
 
   &__name-input {}
 
-  &__surname-input {}
+  &__surname-input {
+    margin-top: 10px;
+  }
 
-  &__radio {}
+  &__radio {
+    margin-top: 8px;
+  }
 
-  &__born-date {}
+  &__born-date {
+    margin-top: 18.56px;
+  }
 
   &__born-date-title,
-  &__entry-title {}
+  &__entry-title {
+    font-family: $montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    text-transform: uppercase;
+    color: $dark100;
+  }
+
+  &__entry-title {
+    margin-top: 16px;
+  }
 
   &__born-date-input {}
 
@@ -37,15 +63,33 @@
 
   &__email-input {}
 
-  &__password-input {}
+  &__password-input {
+    margin-top: 10px;
+  }
 
-  &__toggle {}
+  &__toggle {
+    margin-top: 7px;
+  }
 
-  &_registration-button {}
+  &__registration-button {
+    margin-top: 23px;
+  }
 
-  &__account-entry {}
+  &__account-entry {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+  }
 
-  &__account-title {}
+  &__account-title {
+    font-family: $montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    color: black;
+    align-self: center;
+  }
 
   &__entry-button {}
 
