--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -4,3 +4,4 @@
 @import '../common/fonts.scss';
 @import '../../components/search-card/search-card.scss';
 @import '../../components/registration-card/registration-card.scss';
+@import '../../components/price-card/price-card.scss';
