continue price-card
styling

--- a/src/components/price-card/price-card.pug
+++ b/src/components/price-card/price-card.pug
@@ -28,7 +28,7 @@ mixin price-card(options)
             })
         .price-card__details
           .price-card__payment
-            p.price-card__price-per-day=`${options.price}` + `x` + `4 суток`
+            p.price-card__price-per-day=`${options.price}` + `₽ `+ `x ` + `4 суток`
             p.price-card__count 39 960₽
           .price-card__fee
             p.price-card__fee-definition= `Сбор за услуги: скидка `
