--- a/src/components/price-card/price-card.pug
+++ b/src/components/price-card/price-card.pug
@@ -41,7 +41,7 @@ mixin price-card(options)
             p.price-card__total-definition Итого
             .price-card__total-dashes
             p.price-card__total-count= `38 081₽`
-        .search-card__button
+        .price-card__button
           +button({text: 'Забронировать', 
                 isRegister: 'false',
                 isRegisterRus: 'false',
