--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -13,7 +13,7 @@ html
     meta(name='viewport' content='initial-scale=1.0, width=device-width')
     meta(name='keywords' content='cards')
     meta(name='description' content='Cards')
-    title Form Elements
+    title Cards
     link(rel='stylesheet' href='./cards.scss')
     script(src='../jquery-for-parcel.js')
     script(src='./cards.js')
