--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -1,6 +1,7 @@
 include ../../components/search-card/search-card.pug
 include ../../components/registration-card/registration-card.pug
 include ../../components/price-card/price-card.pug
+include ../../components/login-card/login-card.pug
 - 
   let dropArrayGuests = [
     {item: 'Взрослые', id: 'adults', group: 'true',},
@@ -23,11 +24,15 @@ html
     br
     div(style="height: 500px; display: flex; justify-content: center; align-items: center;")
       //+registration-card({dropdownArray: dropArrayGuests})
-      +price-card({dropdownArray: dropArrayGuests,
-                  number: '888',
-                  type: 'люкс',
-                  price: '9 990',
-                  feeCount: '0',
-                  feeDiscount: '2 179',
-                  addFeeCount: '300',
-      })
+      //-
+        +price-card({dropdownArray: dropArrayGuests,
+                    number: '888',
+                    type: 'люкс',
+                    price: '9 990',
+                    feeCount: '0',
+                    feeDiscount: '2 179',
+                    addFeeCount: '300',
+        })
+      //-
+
+      +login-card()
