--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -5,3 +5,4 @@
 @import '../../components/search-card/search-card.scss';
 @import '../../components/registration-card/registration-card.scss';
 @import '../../components/price-card/price-card.scss';
+@import '../../components/login-card/login-card.scss';
