--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -6,3 +6,5 @@
 @import '../../components/registration-card/registration-card.scss';
 @import '../../components/price-card/price-card.scss';
 @import '../../components/login-card/login-card.scss';
+@import '../../components/date-dropdown/date-dropdown.scss';
+@import '../../components/calendar/calendar.scss';
