--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -8,3 +8,4 @@
 @import '../../components/login-card/login-card.scss';
 @import '../../components/date-dropdown/date-dropdown.scss';
 @import '../../components/calendar/calendar.scss';
+@import '../../components/room-card/room-card.scss';
