--- a/src/components/room-card/room-card.pug
+++ b/src/components/room-card/room-card.pug
@@ -2,16 +2,24 @@ include ../rate-button/rate-button.pug
 mixin room-card(options)
   .room-card
     .room-card__image(style=`background-image: url(${options.imageUrl});`)
+    .room-card__arrow-back.material-icons expand_more
+    .room-card__arrow-forward.material-icons expand_more
+    .room-card__links
+      .room-card__link
+      .room-card__link
+      .room-card__link
+      .room-card__link
     .room-card__info
       .room-card__detail
-        p.price-card__room= `№ `
-          span.price-card__room-number= `${options.number} `
-          span.price-card__room-type= `${options.type}`
-        p.price-card__price= `${options.price}` + `₽ `
-          span.price-card__price-days в сутки
+        p.room-card__room= `№ `
+          span.room-card__room-number= `${options.number} `
+          span.room-card__room-type= `${options.type}`
+        p.room-card__price= `${options.price}` + `₽ `
+          span.room-card__price-days в сутки
+      .room-card__separator
       .room-card__comments
         .room-card__stars
           +rate-button({rate: options.starsCount})
         p.room-card__reviews
-          span.price-card__room-number= options.reviewsCount
-          span.price-card__room-type Отзывов
+          span.room-card__review-number= options.reviewsCount
+          span.room-card__review-count= ' Отзывов'
