--- a/src/pages/headers-and-footers/headers-and-footers.pug
+++ b/src/pages/headers-and-footers/headers-and-footers.pug
@@ -1,4 +1,4 @@
-include ../../components/room-card/room-card.pug
+include ../../components/header/header.pug
 html
   head
     meta(charset='utf-8')
@@ -9,3 +9,6 @@ html
     link(rel='stylesheet' href='./headers-and-footers.scss')
     script(src='../jquery-for-parcel.js')
     script(src='./headers-and-footers.js')
+  body
+    .test__container
+      +header
