--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -29,6 +29,11 @@
     }
   }
 
+  &_small {
+    width: 4.9375rem;
+    height: 2.125rem;
+  }
+
   &_with-arrow {
     position: relative;
     width: 20rem;
