--- a/src/pages/headers-and-footers/headers-and-footers.pug
+++ b/src/pages/headers-and-footers/headers-and-footers.pug
@@ -11,4 +11,6 @@ html
     script(src='./headers-and-footers.js')
   body
     .test__container
-      +header
+      +header({
+        lang: 'ru',
+      })
