--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,24 +6,69 @@
   box-shadow: 0px 10px 20px $dark5;
 
 
-  &__content {
-    display: flex;
-    padding: 15px 140px;
-    align-items: center;
-  }
+  &__content {}
 
   &__nav {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    width: 38.4483%;
+    align-items: center;
+
+    @media(min-width: 600px) {
+      justify-content: center;
+    }
   }
+
+  &__logo {
+
+    @media(min-width: 600px) {
+      flex: 1;
+    }
+
+    @media(min-width: 900px) {
+      order: 0;
+    }
+  }
+
+  &__item {
+    display: flex;
+    width: 100%;
+    text-align: center;
+    order: 3;
+    display: none;
+
+    @media(min-width: 900px) {
+      display: block;
+      width: auto;
+      order: 1;
+    }
+
+    &_active {
+      display: block;
+    }
+  }
+
+  &__item.header__buttons {
+    order: 2;
+
+    @media(min-width: 600px) {
+      width: auto;
+      order: 1;
+      display: block;
+    }
+
+    @media(min-width: 900px) {
+      order: 2;
+    }
+  }
+
+
 
   &__link {
     font-family: $montserrat;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 17px;
     color: $dark50;
     text-decoration-line: none;
 
@@ -33,8 +78,30 @@
     }
   }
 
+  &__icon {
+    cursor: pointer;
+    color: $dark50;
 
-  &__buttons {
-    display: flex;
+    &:focus,
+    &:hover {
+      color: $dark75;
+    }
+  }
+
+
+
+
+  &__toggle {
+    order: 1;
+
+    @media(min-width: 600px) {
+      flex: 1;
+      text-align: right;
+      order: 2;
+    }
+
+    @media(min-width: 900px) {
+      display: none;
+    }
   }
 }
