--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,12 +1,21 @@
 @import '../button/button.scss';
 
 .header {
+  width: 100%;
   height: 70px;
   background: #FFFFFF;
   box-shadow: 0px 10px 20px $dark5;
 
 
-  &__content {}
+  &__content {
+
+    padding: 15px 10px;
+
+    @media(min-width: 752px) {
+      padding: 15px 140px;
+    }
+
+  }
 
   &__nav {
     display: flex;
@@ -14,18 +23,18 @@
     justify-content: space-between;
     align-items: center;
 
-    @media(min-width: 600px) {
+    @media(min-width: 752px) {
       justify-content: center;
     }
   }
 
   &__logo {
 
-    @media(min-width: 600px) {
+    @media(min-width: 752px) {
       flex: 1;
     }
 
-    @media(min-width: 900px) {
+    @media(min-width: 1250px) {
       order: 0;
     }
   }
@@ -36,10 +45,12 @@
     order: 3;
     display: none;
 
-    @media(min-width: 900px) {
+
+    @media(min-width: 1250px) {
       display: flex;
       width: auto;
       order: 1;
+      margin-right: 1.25rem;
     }
 
     &_active {
@@ -50,13 +61,14 @@
   &__item.header__buttons {
     order: 2;
 
-    @media(min-width: 600px) {
+    @media(min-width: 752px) {
       width: auto;
       order: 1;
       display: block;
+      margin-left: 1.25rem;
     }
 
-    @media(min-width: 900px) {
+    @media(min-width: 1250px) {
       order: 2;
     }
   }
@@ -70,6 +82,8 @@
     font-size: 14px;
     color: $dark50;
     text-decoration-line: none;
+
+    text-align: center;
 
     &:focus,
     &:hover {
@@ -87,19 +101,25 @@
     }
   }
 
+  &__login-button {
 
+    @media(min-width: 1250px) {
+      margin-right: 1.25rem;
+    }
+
+  }
 
 
   &__toggle {
     order: 1;
 
-    @media(min-width: 600px) {
+    @media(min-width: 752px) {
       flex: 1;
       text-align: right;
       order: 2;
     }
 
-    @media(min-width: 900px) {
+    @media(min-width: 1250px) {
       display: none;
     }
   }
