--- a/src/pages/headers-and-footers/headers-and-footers.pug
+++ b/src/pages/headers-and-footers/headers-and-footers.pug
@@ -12,5 +12,8 @@ html
   body
     .test__container
       +header({
-        lang: 'ru',
+        lang: 'en',
+        type: 'user',
+        userName: 'Cosmin Negoita',
       })
+
