--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -9,9 +9,12 @@ mixin header(options)
     let isRu = (options.lang == 'ru');
     let isEn = (options.lang == 'en');
     let buttons = {};
+    let type = options.type;
+    
     let registerButtonText = '';
     registerButtonText += isRu ? 'Зарегистрироваться' : '';
     registerButtonText += isEn ? 'Register' : '';
+    
     let loginButtonText = '';
     loginButtonText += isRu ? 'Войти' : '';
     loginButtonText += isEn ? 'Login' : '';
@@ -21,19 +24,7 @@ mixin header(options)
     .header__content
       nav.header__nav
         .header__logo
-
           +logo({type: 'default'})
-        
-        
-        //-
-          if isRu
-            each val in ruMenu
-              .header__nav-item
-                a.header__link(href='/mock-adress')= val
-          else if isEn
-            each val in enMenu
-              .header__nav-item
-                a.header__link(href='/mock-adress')= val
         - let i = 0;
         if isRu
           while (i < ruMenu.length) 
@@ -60,28 +51,36 @@ mixin header(options)
                   a.header__link(href='/mock-adress')= enMenu[i]
               - i++;
 
-        .header__item.header__buttons
-          .header__login-button
-            +button({
-              text: loginButtonText, 
-              isRegister: 'false',
-              isRegisterRus: 'false',
-              isWithArrow: 'false',
-              transparent: 'true',
-              isNoBorder: 'false',
-              isSmall: 'true',
-            })
-        .header__item.header__buttons
-          .header__register-button
-            +button({
-              text: registerButtonText, 
-              isRegister: 'true',
-              isRegisterRus: registerButtonRu,
-              isWithArrow: 'false',
-              transparent: 'false',
-              isNoBorder: 'false',
-              isSmall: 'false',
-            })
+        if type == 'anon'  
+          .header__item.header__buttons
+            .header__login-button
+              +button({
+                text: loginButtonText, 
+                isRegister: 'false',
+                isRegisterRus: 'false',
+                isWithArrow: 'false',
+                transparent: 'true',
+                isNoBorder: 'false',
+                isSmall: 'true',
+              })
+
+            
+          .header__item.header__buttons
+            .header__register-button
+              +button({
+                text: registerButtonText, 
+                isRegister: 'true',
+                isRegisterRus: registerButtonRu,
+                isWithArrow: 'false',
+                transparent: 'false',
+                isNoBorder: 'false',
+                isSmall: 'false',
+              })
+        else if type == 'user'
+          .header__item.header__separator
+          .header__item.header__user
+            p.header__user-name= options.userName
+
 
         .header__toggle
             i.material-icons.header__burger dehaze
