--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,6 @@
 
 .header {
   width: 100%;
-  height: 70px;
   background: #FFFFFF;
   box-shadow: 0px 10px 20px $dark5;
 
@@ -44,13 +43,14 @@
     text-align: center;
     order: 3;
     display: none;
+    padding: 0 auto;
 
 
     @media(min-width: 1250px) {
       display: flex;
       width: auto;
       order: 1;
-      margin-right: 1.25rem;
+      margin-right: 30px;
     }
 
     &_active {
@@ -58,7 +58,8 @@
     }
   }
 
-  &__item.header__buttons {
+  &__item.header__buttons,
+  &__item.header__user {
     order: 2;
 
     @media(min-width: 752px) {
@@ -70,6 +71,7 @@
 
     @media(min-width: 1250px) {
       order: 2;
+      margin-left: 0;
     }
   }
 
@@ -82,8 +84,10 @@
     font-size: 14px;
     color: $dark50;
     text-decoration-line: none;
-
+    margin: 0 auto;
     text-align: center;
+    display: inline-block;
+
 
     &:focus,
     &:hover {
@@ -94,19 +98,65 @@
   &__icon {
     cursor: pointer;
     color: $dark50;
+    display: none;
+
+
 
     &:focus,
     &:hover {
       color: $dark75;
     }
+
+    @media(min-width: 1250px) {
+      display: block;
+    }
+  }
+
+  &__buttons {
+    margin: 0;
   }
 
   &__login-button {
+    margin: 2px auto;
 
     @media(min-width: 1250px) {
-      margin-right: 1.25rem;
+      margin-right: 20px;
+      margin-left: 0;
     }
+  }
 
+  &__register-button {
+    margin: 2px auto;
+
+    @media(min-width: 1250px) {
+      margin-right: 0px;
+    }
+  }
+
+  &__separator {
+    width: 1px;
+    height: 30px;
+    background: rgba(31, 32, 65, 0.1);
+    display: none;
+
+    @media(min-width: 1250px) {
+      display: block;
+    }
+  }
+
+  &__user {
+    margin: 0;
+  }
+
+  &__user-name {
+    margin: 0 auto;
+    font-family: $montserrat;
+    font-size: 14px;
+    color: $dark75;
+
+    @media(min-width: 1250px) {
+      color: $dark50;
+    }
   }
 
 
