added font awesome (brands), started footer

--- a/src/pages/headers-and-footers/headers-and-footers.scss
+++ b/src/pages/headers-and-footers/headers-and-footers.scss
@@ -3,6 +3,9 @@
 @import '../common/global.scss';
 @import '../common/fonts.scss';
 @import '../../components/header/header.scss';
+@import '../../components/footer/footer.scss';
+
+
 
 .test__container {
   min-width: 320px;
