--- a/src/pages/common/fonts.scss
+++ b/src/pages/common/fonts.scss
@@ -77,3 +77,6 @@
   /* Support for IE. */
   font-feature-settings: 'liga';
 }
+
+@import '../../fonts/fontawesome/scss/fontawesome.scss';
+@import '../../fonts/fontawesome/scss/brands.scss';
