--- a/src/pages/headers-and-footers/headers-and-footers.pug
+++ b/src/pages/headers-and-footers/headers-and-footers.pug
@@ -1,4 +1,5 @@
 include ../../components/header/header.pug
+include ../../components/footer/footer.pug
 html
   head
     meta(charset='utf-8')
@@ -17,3 +18,6 @@ html
         userName: 'Cosmin Negoita',
       })
 
+    <i class="fab fa-twitter"></i>
+    <i class="fab fa-facebook-square"></i>
+    <i class="fab fa-instagram"></i>
