--- a/src/pages/headers-and-footers/headers-and-footers.pug
+++ b/src/pages/headers-and-footers/headers-and-footers.pug
@@ -17,6 +17,11 @@ html
         type: 'user',
         userName: 'Cosmin Negoita',
       })
+      br
+      +footer({
+        lang: 'en',
+      })
+
 
     <i class="fab fa-twitter"></i>
     <i class="fab fa-facebook-square"></i>
