--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,2 +1,63 @@
+include ../logo/logo.pug
+
 mixin footer(options)
+  -
+    let isRu = (options.lang == 'ru');
+    let isEn = (options.lang == 'en');
+    let enNav = ['Navigation', 'About Us', 'News', 'Support', 'Products',];
+    let ruNav = ['Навигация', 'О нас', 'Новости', 'Служба поддержки', 'Услуги',];
+    let enAbout = ['About Us', 'Who we are', 'Our team', 'Careers', 'Investors',];
+    let ruAbout = ['О нас', 'О сервисе', 'Наша команда', 'Вакансии', 'Инвесторы',];
+    let enSupport = ['Documentation', 'Community', 'Get in Touch',];
+    let ruSupport = ['Соглашения', 'Сообщества', 'Связь с нами',];
+
   .footer
+    .footer__main-wrapper
+      .footer__widgets
+        .footer__info
+          .footer__info-logo
+            +logo({type: 'default'})
+          if isRu
+            p.footer__info-title Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
+          else if isEn
+            p.footer__info-title Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.
+        .footer__nav
+          if isRu
+            .footer__nav-title Навигация
+            each val in ruNav
+              .footer__nav-item
+                a.footer__nav-link(href='/mock-adress')= val
+          else if isEn
+            .footer__nav-title Naigation
+            each val in enNav
+              .footer__nav-item
+                a.footer__nav-link(href='/mock-adress')= val
+        .footer__about
+          if isRu
+            .footer__about-title О нас
+            each val in ruAbout
+              .footer__about-item
+                a.footer__about-link(href='/mock-adress')= val
+          else if isEn
+            .footer__about-title About us
+            each val in enAbout
+              .footer__about-item
+                a.footer__about-link(href='/mock-adress')= val
+        .footer__support
+          if isRu
+            .footer__support-title Служба поддержки
+            each val in ruSupport
+              .footer__support-item
+                a.footer__support-link(href='/mock-adress')= val
+          else if isEn
+            .footer__support-title Support
+            each val in enSupport
+              .footer__support-item
+                a.footer__support-link(href='/mock-adress')= val
+        .footer__subscribe
+          .footer__subscribe-title
+          .footer__subscribe-info
+          .footer__subscribe-input
+    .footer__wrapper
+      .footer__copyright
+      .footer__icons
